--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/refa3e99/Movies-Library#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "dotenv": "^16.0.0",
+    "express": "^4.18.1",
+    "nodemon": "^2.0.16"
   }
 }
